<resources>
    <string name="app_name">My Application</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="enter_your_phone_no">Enter Your Phone no</string>
    <string name="enter_your_password">Enter Your password</string>
    <string name="login">login</string>
    <string name="register">REGISTER</string>
    <string name="or_sign_up_with">or sign up with</string>
    <string name="re_password">Re-Password</string>
    <string name="password">Enter Your Password</string>
    <string name="user_email">Enter Your Email</string>
    <string name="user_id">User Id</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_click_here">Already Have An Account!Click Here</string>
    <string name="new_user_please_click_here">New user please Click Here</string>
</resources>